feat: 読み込み時にsystemd風のログを出すように
Signed-off-by: eternal-flame-AD <yume@yumechi.jp>

SPDX

fix?

fix

add

?

Revert "add"

This reverts commit 6d44b4639c13ab2446c2b76490c5e3c26623c566.

?

chore

style

--- a/packages/backend/src/server/web/views/base.pug
+++ b/packages/backend/src/server/web/views/base.pug
@@ -4,6 +4,7 @@ block loadClientEntry
 	- const entry = config.frontendEntry;
 	- const baseUrl = config.url;
 
+
 doctype html
 
 //
@@ -77,8 +78,6 @@ html
 		script(type='application/json' id='misskey_clientCtx' data-generated-at=now)
 			!= clientCtx
 
-		script
-			include ../boot.js
 
 	body
 		noscript: p
@@ -86,19 +85,15 @@ html
 			br
 			| Please turn on your JavaScript
 		div#splash
+			div#tty
 			img#splashIcon(src= icon || '/static-assets/splash.png')
 			span#splashText
 				block customSplashText
 					= customSplashText
 			div#splashSpinner
-				<svg class="spinner bg" viewBox="0 0 152 152" xmlns="http://www.w3.org/2000/svg">
-					<g transform="matrix(1,0,0,1,12,12)">
-						<circle cx="64" cy="64" r="64" style="fill:none;stroke:currentColor;stroke-width:24px;"/>
-					</g>
-				</svg>
-				<svg class="spinner fg" viewBox="0 0 152 152" xmlns="http://www.w3.org/2000/svg">
-					<g transform="matrix(1,0,0,1,12,12)">
-						<path d="M128,64C128,28.654 99.346,0 64,0C99.346,0 128,28.654 128,64Z" style="fill:none;stroke:currentColor;stroke-width:24px;"/>
-					</g>
-				</svg>
+				<span>Loading...</span>
+
+		script
+			include ../boot.js
+
 		block content
