--- a/packages/frontend/src/style.scss
+++ b/packages/frontend/src/style.scss
@@ -177,8 +177,13 @@ rt {
 
 ._spacer {
 	width: 100%;
-	max-width: calc(min(var(--MI_SPACER-w, 100%), 100%) - (var(--MI_SPACER-max, 24px) * 2));
-	margin: var(--MI_SPACER-max, 24px) auto;
+	max-width: min(var(--MI_SPACER-w, 100%), calc(100% - (var(--MI_SPACER-max, 24px) * 2)));
+
+	/* marginを使って余白を表現すると、margin特有の親突き抜け仕様などが厄介になってくるので上下はpaddingを使う */
+	padding: var(--MI_SPACER-max, 24px) 0;
+	margin: 0 auto;
+
+	box-sizing: border-box;
 	container-type: inline-size;
 
 	/* 子に継承させない */
@@ -188,14 +193,14 @@ rt {
 }
 
 ._forceShrinkSpacer ._spacer {
-	max-width: calc(min(var(--MI_SPACER-w, 100%), 100%) - (var(--MI_SPACER-min, 12px) * 2));
-	margin: var(--MI_SPACER-min, 12px) auto;
+	max-width: min(var(--MI_SPACER-w, 100%), calc(100% - (var(--MI_SPACER-min, 12px) * 2)));
+	padding: var(--MI_SPACER-min, 12px) 0;
 }
 
 @container (max-width: 450px) {
 	._spacer {
-		max-width: calc(min(var(--MI_SPACER-w, 100%), 100%) - (var(--MI_SPACER-min, 12px) * 2));
-		margin: var(--MI_SPACER-min, 12px) auto;
+		max-width: min(var(--MI_SPACER-w, 100%), calc(100% - (var(--MI_SPACER-min, 12px) * 2)));
+		padding: var(--MI_SPACER-min, 12px) 0;
 	}
 }
 
